--- a/app/globals.css
+++ b/app/globals.css
@@ -5,12 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #171717;
   }
 }
 
@@ -24,4 +26,11 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+bg-default {
+  background-color: var(--background);
+}
+text-default {
+  color: var(--foreground);
 }
